--- a/Changes
+++ b/Changes
@@ -1,11 +1,12 @@
 Revision history for Catmandu-Store-CHI
 
 {{$NEXT}}
+  - removing Data::UUID dependency
   - cosmetic changes
 
 0.02  2014-06-28 08:50:41 CEST
   - adding pod
-  - adding Dist::Milla 
+  - adding Dist::Milla
   - adding tests
 
 0.01    2014-06-28
